package iuh.fit.backend.model.enums;

public enum Role {
    CUSTOMER,
    ADMIN,
    STAFF,
}
